--- a/engineering_efficiency/git/.gitconfig
+++ b/engineering_efficiency/git/.gitconfig
@@ -4,7 +4,7 @@
 [core]
 	autocrlf = true
 [alias]
-    find-branch = !sh -c \"git branch -a | grep -v remotes | grep $1 | head -n 1 | xargs git checkout\"
+    fb = !sh -c \"git branch -a | grep -v remotes | grep $1 | head -n 1 | xargs git checkout\"
 
     co = checkout 
 
@@ -25,5 +25,33 @@
     ca = commit -a 
     
     b = branch
-      
 
+    gu = ls-files . --exclude-standard --others
+      
+    sl = log --graph --pretty=format:'%Cred%h%Creset -%C(yellow)%d%Creset %s %Cgreen(%cr) %C(bold blue)<%an>%Creset' --abbrev-commit --date=relative --all --since='90 days ago'
+  
+    summary = show  # Mercurial crib
+
+[color]
+        diff = auto
+        status = auto
+        branch = auto
+        interactive = auto
+        ui = true
+        pager = true
+
+[color "branch"]
+        current = yellow reverse
+        local = yellow
+        remote = green
+
+[color "diff"]
+        meta = yellow bold
+        frag = magenta bold
+        old = red bold
+        new = green bold
+
+[color "status"]
+        added = yellow
+        changed = green
+        untracked = cyan
